--- a/stingray/templates/pool.erb
+++ b/stingray/templates/pool.erb
@@ -5,7 +5,7 @@
 <% unless @persistence.class == NilClass -%><%="persistence #{@persistence}"%><%end%>
 <% unless @priority.class == NilClass -%>priority!values <%=@priority.class == Array ? @priority * " " : @priority%><%end-%>
 nodes <% unless @nodes.class == NilClass -%><%=@nodes.class == Array ? @nodes * " " : @nodes.to_s %><%end%>
-monitors <%= @monitors.class == Array ? @monitors * " " : @monitors.to_s%>
+monitors <%= @monitors.class == Array ? "\"" + (@monitors * "\" \"") + "\"" : "\"" + @monitors + "\""%>
 load_balancing!algorithm <%= @alg_code %>
 disabled <%= @disabled.class == Array ? @disabled * " " : @disabled%>
 draining <%= @draining.class == Array ? @draining * " " : @draining%>
