General bug fixes and clean up.

--- a/stingray/templates/join_cluster.erb
+++ b/stingray/templates/join_cluster.erb
@@ -13,4 +13,4 @@ zlb!admin_port=<%= @join_cluster_port %>
 zlb!admin_username=<%= @admin_username %>
 zlb!admin_password=<%= @admin_password %>
 zxtm!user=
-zxtm!clustertipjoin=y
+zxtm!clustertipjoin=n
