--- a/stingray/templates/virtual_server.erb
+++ b/stingray/templates/virtual_server.erb
@@ -25,7 +25,12 @@ responserules <%= @response_rules.class == Array ? "\"" + (@response_rules * "\"
 <% if @request_rules then -%>
 rules <%= @request_rules.class == Array ? "\"" + (@request_rules * "\" \"") + "\"" : "\"" + @request_rules  + "\""%>
 <% end %>
-<% if @protection != :undef -%>
+<% if @protection then -%>
 protection  <%= @protection %>
 <% end -%>
 <% if @timeout -%>timeout <%= @timeout %><% end %>
+webcache!enabled   <%= @caching %>
+gzip!enabled   <%= @compression %>
+<% if @compression_level then -%>
+gzip!compresslevel  <%= @compression_level %>
+<% end -%>
