- Added support for bandwidth management classes. - Unused resources are now automatically removed, no need for the del_pool, del_protection, etc defined resource types - Support for raising IP Addresses in a Traffic IP Group on all machines in the cluster.  Please see trafficipgroup section in Chapter 3. - Misc bug fixes

--- a/stingray/templates/virtual_server.erb
+++ b/stingray/templates/virtual_server.erb
@@ -28,6 +28,9 @@ rules <%= @request_rules.class == Array ? "\"" + (@request_rules * "\" \"") + "\
 <% if @protection then -%>
 protection  <%= @protection %>
 <% end -%>
+<% if @bandwidth then -%>
+bandwidth_class  <%= @bandwidth %>
+<% end -%>
 <% if @timeout -%>timeout <%= @timeout %><% end %>
 webcache!enabled   <%= @caching %>
 gzip!enabled   <%= @compression %>
