--- a/stingray/templates/new_cluster.erb
+++ b/stingray/templates/new_cluster.erb
@@ -4,7 +4,7 @@ net!warn=
 start_at_boot=Y
 zxtm!cluster=C
 zxtm!group=
-zxtm!license_key=<%= @local_license_key%>
+zxtm!license_key=
 zxtm!use_invalid_key_license=y
 zxtm!unique_bind=N
 zxtm!user=
