--- a/stingray/templates/pool.erb
+++ b/stingray/templates/pool.erb
@@ -9,3 +9,6 @@ monitors <%= @monitors.class == Array ? "\"" + (@monitors * "\" \"") + "\"" : "\
 load_balancing!algorithm <%= @alg_code %>
 disabled <%= @disabled.class == Array ? @disabled * " " : @disabled%>
 draining <%= @draining.class == Array ? @draining * " " : @draining%>
+<% if @bandwidth then -%>
+bandwidth_class  <%= @bandwidth %>
+<% end -%>
