add support for passive_monitoring in pool parameters

--- a/stingray/templates/pool.erb
+++ b/stingray/templates/pool.erb
@@ -16,3 +16,6 @@ bandwidth_class  <%= @bandwidth %>
 <% if @ssl_encrypt then -%>
 ssl_encrypt    <%= @ssl_encrypt %>
 <% end -%>
+<% if @passive_monitoring then -%>
+passive_monitoring      <%= @passive_monitoring %>
+<% end -%>
