--- a/stingray/templates/join_cluster.erb
+++ b/stingray/templates/join_cluster.erb
@@ -1,16 +1,15 @@
+Zeus::ZInstall::Common::get_password:Administrator Password=<%= @admin_password%>
 accept-license=<%= @accept_license%>
-admin!password=<%= @admin_password%>
-net!warn=
 start_at_boot=Y
-zxtm!group=
-zxtm!license_key=<%= @local_license_key%>
-zxtm!use_invalid_key_license=y
-zxtm!unique_bind=N
-zxtm!cluster=S
-zxtm!fingerprints_ok=y
 zlb!admin_hostname=<%= @join_cluster_host %>
+zlb!admin_password=<%= @admin_password %>
 zlb!admin_port=<%= @join_cluster_port %>
 zlb!admin_username=<%= @admin_username %>
-zlb!admin_password=<%= @admin_password %>
-zxtm!user=
+zxtm!cluster=S
 zxtm!clustertipjoin=n
+zxtm!fingerprints_ok=Y
+zxtm!group=nogroup
+zxtm!license_key=
+zxtm!name_setname=1
+zxtm!unique_bind=N
+zxtm!user=nobody
