--- a/stingray/templates/virtual_server.erb
+++ b/stingray/templates/virtual_server.erb
@@ -1,50 +1,44 @@
 address <%= @address.class == Array ? "\"" + (@address * "\" \"") + "\"": "\"" + @address + "\""%>
-<% if @client_cas then -%>client_cas <%=@client_cas * " "%><% end %>
-enabled <% if @enabled == "yes" then -%>yes<% else -%>no<% end %>
+pool <%= @pool.class == Array ? @pool * " " : @pool%>
 port <%= @port%>
-<% if @ssl_certificate -%>
-private_key <%= @ssl_certificate%>.private
+enabled	<%= @enabled %>
+webcache!enabled   <%= @caching %>
+gzip!enabled   <%= @compression %>
+aptimizer!enabled	<%= @aptimizer_express_code %>
+<% if @client_cas then -%>client_cas <%=@client_cas * " "%>
+<% end -%>
+<% if @ssl_certificate -%>private_key <%= @ssl_certificate%>.private
 public_cert <%= @ssl_certificate%>.public
 <% end -%>
 protocol <%= @proto_code %>
-<% if @enable_logging -%>
-log!enabled     Yes
+<% if @enable_logging -%>log!enabled     Yes
 log!filename    <%= @log_filename %>
 <% end -%>
-<% if @max_client_buffer then -%>
-max_client_buffer       <%= @max_client_buffer %>
-<% end -%>
-<% if @ssl_decrypt == "yes" then -%>ssl_decrypt Yes
+<% if @ssl_decrypt.downcase == "yes" then -%>ssl_decrypt Yes
 ssl_ocsp!issuer!_DEFAULT_!aia	Yes
 ssl_ocsp!issuer!_DEFAULT_!nonce	off
 ssl_ocsp!issuer!_DEFAULT_!required	optional
 ssl_ocsp!issuer!_DEFAULT_!responder_cert
 ssl_ocsp!issuer!_DEFAULT_!signer
-ssl_ocsp!issuer!_DEFAULT_!url<% end %>
-pool <%= @pool.class == Array ? @pool * " " : @pool%>
+ssl_ocsp!issuer!_DEFAULT_!url
+<% end -%>
 <% if @response_rules then-%>
 responserules <%= @response_rules.class == Array ? "\"" + (@response_rules * "\" \"") + "\"" : "\"" + @response_rules  + "\""%>
-<% end %>
+<% end -%>
 <% if @request_rules then -%>
 rules <%= @request_rules.class == Array ? "\"" + (@request_rules * "\" \"") + "\"" : "\"" + @request_rules  + "\""%>
-<% end %>
-<% if @protection then -%>
-protection  <%= @protection %>
 <% end -%>
-<% if @bandwidth then -%>
-bandwidth_class  <%= @bandwidth %>
+<% if @protection then -%>protection  <%= @protection %>
 <% end -%>
-<% if @timeout -%>timeout <%= @timeout %><% end %>
-<% if @connect_timeout -%>connect_time  <%= @connect_timeout %><% end %>
-webcache!enabled   <%= @caching %>
-gzip!enabled   <%= @compression %>
-<% if @compression_level then -%>
-gzip!compresslevel  <%= @compression_level %>
+<% if @bandwidth then -%>bandwidth_class  <%= @bandwidth %>
 <% end -%>
-<% if @aptimizer_express_code == "yes" then -%>
-aptimizer!enabled Yes
+<% if @timeout -%>timeout <%= @timeout %>
 <% end -%>
-<% unless @ssl_sites.class == NilClass then @ssl_sites.each do |hostname,certificate|-%>
-<%="ssl_sites!#{hostname}!private_key     #{certificate}.private"%>
-<%="ssl_sites!#{hostname}!public_cert     #{certificate}.public"%>
-<%end end-%>
+<% if @connect_timeout -%>connect_time  <%= @connect_timeout %>
+<% end -%>
+<% if @compression_level then -%>gzip!compresslevel  <%= @compression_level %>
+<% end -%>
+<% if @rc_save_all then -%>recent_conns!save_all	<%= @rc_save_all %>
+<% end -%>
+<% if @error_file then -%>error_file  <%= @error_file %>
+<% end -%>
